2002-04-16  Jeff Johnston  <jjohnstn@redhat.com>

	* m68k/configure.in: Change to use LIB_AC_PROG_CC instead
	of AC_PROG_CC to avoid building an executable in configuration.
	* m68k/configure: Regenerated.

2002-04-15  Hans-Peter Nilsson  <hp@bitrange.com>

        * d30v/syscalls.c: #include <time.h>.  Don't use multi-line
        strings.

2002-04-15  Hans-Peter Nilsson  <hp@bitrange.com>

        * m32r/trapmon0.c (__trap0): Don't use multi-line strings.

2002-02-05  Mark Salter  <msalter@redhat.com>

	* arm/elf-iq80310.specs: Ditto.
	* arm/elf-redboot.specs: Ditto.
	* arm/elf-redboot.ld: Fix eh_frame sections. Add .jcr section.
	* arm/redboot-crt0.S: Add support for __USES_INITFINI__.

2002-02-01  Geoffrey Keating  <geoffk@redhat.com>

	* xstormy16/Makefile.in (SIM_OBJS): Remove sbrk.o, add
	sim_malloc_start.o.
	* xstormy16/eva_app.ld: Add __malloc_start.
	* xstormy16/sbrk.c: Remove.
	* xstormy16/sim_malloc_start.s: New file.
	* xstormy16/sim_high.ld: Make the stack start immediately at the
	end of the program.

2002-02-01  Michael Meissner  <meissner@redhat.com>

	* mips/cma101.c (__sizemem_default): Allow user to specify the
	memory size.
	(__sizemem): Use it.

2002-01-24  Mark Salter  <msalter@redhat.com>

	* arm/redboot-crt0.S: Use __get_memtop to put stack in high memory.

	* arm/redboot-syscalls.c (_times): Unconditionally use SYS_times.
	(__get_memtop): New funtion to return top of memory.

2002-01-15  Mark Salter  <msalter@redhat.com>

	* xstormy16/eva_stub.ld: Provide interrupt routine symbols which
	forward interrupts to user application vectors.

	* xstormy16/crt0_stub.s: Remove default interrupt routines.

	* xstormy16/Makefile.in: Rename stub app to eva_stub.elf and
	add it to install list.

2002-01-07  Mark Salter  <msalter@redhat.com>

	* configure.in: Add support for arm, strongarm, and xscale.
	* configure: Regenerated.
	* arm/coff-iq80310.specs: New file.
	* arm/coff-redboot.ld: New file.
	* arm/coff-redboot.specs: New file.